--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@swimlane/ngx-charts": "^19.0.1",
+    "@types/jquery": "^3.5.7",
     "angular-material-badge": "^1.2.91",
     "bootstrap": "^5.1.2",
     "interactjs": "^1.10.11",
+    "jquery": "^3.6.0",
     "ngx-bootstrap": "^7.1.0",
     "pdfjs-dist": "^2.10.377",
     "rxjs": "~6.6.0",
@@ -39,8 +41,9 @@
     "@angular-devkit/build-angular": "^12.2.10",
     "@angular/cli": "~12.2.2",
     "@angular/compiler-cli": "~12.2.0",
+    "@interactjs/types": "^1.10.11",
     "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.33",
     "font-awesome": "^4.7.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
