--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "interactjs": "^1.10.11",
     "ng-multiselect-dropdown": "^0.3.4",
     "ngx-bootstrap": "^7.1.0",
+    "ngx-pagination": "^5.1.1",
     "pdfjs-dist": "^2.10.377",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
