--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "angular-material-badge": "^1.2.91",
     "bootstrap": "^5.1.2",
     "interactjs": "^1.10.11",
-    "ng-multiselect-dropdown": "^0.3.4",
     "jquery": "^3.6.0",
+    "mdb-angular-ui-kit": "^1.4.0",
+    "ng-multiselect-dropdown": "^0.3.4",
     "ngx-bootstrap": "^7.1.0",
     "ngx-pagination": "^5.1.1",
     "pdfjs-dist": "^2.10.377",
