--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jquery": "^3.6.0",
     "mdb-angular-ui-kit": "^1.4.0",
     "ng-multiselect-dropdown": "^0.3.4",
+    "ng2-datepicker": "^12.0.0",
     "ngx-bootstrap": "^7.1.0",
     "ngx-pagination": "^5.1.1",
     "pdfjs-dist": "^2.10.377",
