--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@swimlane/ngx-charts": "^19.0.1",
     "@types/jquery": "^3.5.7",
+    "angular-highcharts": "^12.0.0",
     "angular-material-badge": "^1.2.91",
     "bootstrap": "^5.1.2",
+    "highcharts": "^9.3.1",
+    "highcharts-angular": "^2.10.0",
     "interactjs": "^1.10.11",
     "jquery": "^3.6.0",
     "mdb-angular-ui-kit": "^1.4.0",
