--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,8 @@
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.css",
-              "node_modules/angular-material-badge/source/angular-material-badge.css"
+              "node_modules/angular-material-badge/source/angular-material-badge.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
@@ -110,7 +111,8 @@
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.css",
-              "node_modules/angular-material-badge/source/angular-material-badge.css"
+              "node_modules/angular-material-badge/source/angular-material-badge.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           }
