--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "dependencies": {
     "@almothafar/angular-signature-pad": "^3.0.0-beta.7",
-    "@angular/animations": "~12.2.0",
+    "@angular/animations": "^12.2.13",
     "@angular/cdk": "^12.2.8",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
@@ -44,6 +44,7 @@
     "ngx-bootstrap": "^7.1.0",
     "ngx-pagination": "^5.1.1",
     "ngx-select-ex": "^6.1.1",
+    "ngx-toastr": "^14.2.1",
     "pdfjs-dist": "^2.10.377",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.10",
