--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ngx-bootstrap": "^7.1.0",
     "ngx-pagination": "^5.1.1",
     "ngx-select-ex": "^6.1.1",
+    "ngx-spinner": "^12.0.0",
     "ngx-toastr": "^14.2.1",
     "pdfjs-dist": "^2.10.377",
     "rxjs": "~6.6.0",
