--- a/proxy.config.json
+++ b/proxy.config.json
@@ -2,8 +2,8 @@
   {
     "/api": {
       "target":"http://192.168.1.13:8001",
-      "secure": false,
-      "changeOrigin": false,
+      "secure": true,
+      "changeOrigin": true,
       "pathRewrite": {
         "^/api": ""
       }
