--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "ngx-spinner": "^12.0.0",
     "ngx-toastr": "^14.2.1",
     "pdfjs-dist": "^2.10.377",
+    "primeicons": "^5.0.0",
+    "primeng": "^13.0.2",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.10",
     "tslib": "^2.3.0",
