--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@almothafar/angular-signature-pad": "^3.0.0-beta.7",
     "@angular/animations": "^12.2.13",
-    "@angular/cdk": "^12.2.8",
+    "@angular/cdk": "^12.2.13",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
@@ -25,6 +25,7 @@
     "@fortawesome/angular-fontawesome": "^0.9.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fullcalendar/angular": "^5.10.1",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
@@ -49,6 +50,7 @@
     "ngx-spinner": "^12.0.0",
     "ngx-toastr": "^14.2.1",
     "pdfjs-dist": "^2.10.377",
+    "primeflex": "^3.1.2",
     "primeicons": "^5.0.0",
     "primeng": "^13.0.2",
     "rxjs": "~6.6.0",
