--- a/angular.json
+++ b/angular.json
@@ -40,7 +40,9 @@
               "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/angular-material-badge/source/angular-material-badge.css",
               "node_modules/ngx-toastr/toastr.css",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.css",
               "node_modules/primeicons/primeicons.css"
             ],
             "scripts": []
@@ -115,7 +117,9 @@
               "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/angular-material-badge/source/angular-material-badge.css",
               "node_modules/ngx-toastr/toastr.css",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.css",
               "node_modules/primeicons/primeicons.css"
             ],
             "scripts": []
