--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/jquery": "^3.5.7",
     "angular-highcharts": "^12.0.0",
     "angular-material-badge": "^1.2.91",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.2",
     "highcharts": "^9.3.1",
     "highcharts-angular": "^2.10.0",
