--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ng-multiselect-dropdown": "^0.3.4",
     "ng2-datepicker": "^12.0.0",
     "ngx-bootstrap": "^7.1.0",
+    "ngx-device-detector": "^3.0.0",
     "ngx-pagination": "^5.1.1",
     "ngx-select-ex": "^6.1.1",
     "ngx-spinner": "^12.0.0",
