--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "angular-highcharts": "^12.0.0",
     "angular-material-badge": "^1.2.91",
     "axios": "^0.24.0",
+    "base64-arraybuffer": "^1.0.1",
     "bootstrap": "^5.1.2",
     "highcharts": "^9.3.1",
     "highcharts-angular": "^2.10.0",
