--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "ng2-datepicker": "^12.0.0",
     "ngx-bootstrap": "^7.1.0",
     "ngx-device-detector": "^3.0.0",
+    "ngx-input-search": "^3.0.8",
     "ngx-pagination": "^5.1.1",
     "ngx-select-ex": "^6.1.1",
     "ngx-spinner": "^12.0.0",
