--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "axios": "^0.24.0",
     "base64-arraybuffer": "^1.0.1",
     "bootstrap": "^5.1.2",
+    "dom-to-image": "^2.6.0",
     "highcharts": "^9.3.1",
     "highcharts-angular": "^2.10.0",
     "interactjs": "^1.10.11",
