--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@interactjs/types": "^1.10.11",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.20.33",
+    "eslint": "^8.16.0",
     "font-awesome": "^4.7.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
@@ -78,6 +79,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "ngx-perfect-scrollbar": "^10.1.1",
+    "prettier": "2.6.2",
     "typescript": "~4.3.5"
   }
 }
