--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "ngx-select-ex": "^6.1.1",
     "ngx-spinner": "^12.0.0",
     "ngx-toastr": "^14.2.1",
+    "ngx-webcam": "^0.4.0",
     "pdfjs-dist": "^2.10.377",
     "primeflex": "^3.1.2",
     "primeicons": "^5.0.0",
@@ -69,6 +70,7 @@
     "@angular/cli": "~12.2.2",
     "@angular/compiler-cli": "~12.2.0",
     "@interactjs/types": "^1.10.11",
+    "@types/dom-to-image": "^2.6.4",
     "@types/jasmine": "~3.8.0",
     "@types/lodash": "^4.14.182",
     "@types/node": "^12.20.33",
