--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "lib": [
       "es2018",
       "dom",
-      "ES2021.String"
+      "ES2021.String",
+      "scripthost"
     ]
   },
   "angularCompilerOptions": {
