--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "moment-timezone": "^0.5.34",
     "ng-multiselect-dropdown": "^0.3.4",
     "ng2-datepicker": "^12.0.0",
+    "ng2-pdf-viewer": "^9.1.1",
     "ngx-bootstrap": "^7.1.0",
     "ngx-device-detector": "^3.0.0",
     "ngx-input-search": "^3.0.8",
