--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.10",
     "tslib": "^2.3.0",
+    "utf8": "^3.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
