--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ng2-datepicker": "^12.0.0",
     "ng2-pdf-viewer": "^9.1.1",
     "ngx-bootstrap": "^7.1.0",
+    "ngx-captcha": "^10.0.0",
     "ngx-device-detector": "^3.0.0",
     "ngx-input-search": "^3.0.8",
     "ngx-pagination": "^5.1.1",
