--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "ngx-select-ex": "^6.1.1",
     "ngx-spinner": "^12.0.0",
     "ngx-toastr": "^14.2.1",
+    "ngx-viewport": "^0.0.1",
     "ngx-webcam": "^0.4.0",
     "pdfjs-dist": "^2.16.105",
     "primeflex": "^3.1.2",
