--- a/angular.json
+++ b/angular.json
@@ -45,7 +45,9 @@
               "node_modules/primeflex/primeflex.css",
               "node_modules/primeicons/primeicons.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/@interactjs/interact/interact.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -122,7 +124,9 @@
               "node_modules/primeflex/primeflex.css",
               "node_modules/primeicons/primeicons.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/@interactjs/interact/interact.min.js"
+            ]
           }
         }
       }
