test version để không dính cache

--- a/angular.json
+++ b/angular.json
@@ -46,6 +46,7 @@
               "node_modules/primeicons/primeicons.css"
             ],
             "scripts": [
+              "src/script.js?v=1.0"
             ]
           },
           "configurations": {
