--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/jquery": "^3.5.7",
     "angular-highcharts": "^12.0.0",
     "angular-material-badge": "^1.2.91",
+    "angular-oauth2-oidc": "^12.1.0",
     "axios": "^0.24.0",
     "base64-arraybuffer": "^1.0.1",
     "bootstrap": "^5.1.2",
@@ -43,6 +44,8 @@
     "highcharts-angular": "^2.10.0",
     "interactjs": "^1.10.11",
     "jquery": "^3.6.0",
+    "keycloak-angular": "^7.3.1",
+    "keycloak-js": "^9.0.3",
     "lodash": "^4.17.21",
     "material-icons": "^1.13.7",
     "mdb-angular-ui-kit": "^1.4.0",
